<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:iconTint="@color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:iconTint="@color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:iconTint="@color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_theme_mode"
        android:title="@string/theme"
        app:iconTint="@color/white"
        app:showAsAction="always" />

</menu> 