<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="@dimen/elevation_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/settings" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_settings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                app:cardCornerRadius="@dimen/corner_radius_medium"
                app:cardElevation="@dimen/elevation_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_notifications"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_notifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:checked="true"
                        android:padding="@dimen/spacing_medium"
                        android:text="@string/notifications_enabled"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginVertical="@dimen/spacing_medium"
                app:cardCornerRadius="@dimen/corner_radius_medium"
                app:cardElevation="@dimen/elevation_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_theme"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rg_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium">

                        <RadioButton
                            android:id="@+id/rb_theme_light"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="@string/theme_light"
                            android:textSize="@dimen/text_size_medium" />

                        <RadioButton
                            android:id="@+id/rb_theme_dark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_medium"
                            android:text="@string/theme_dark"
                            android:textSize="@dimen/text_size_medium" />

                        <RadioButton
                            android:id="@+id/rb_theme_system"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:padding="@dimen/spacing_medium"
                            android:text="@string/theme_system"
                            android:textSize="@dimen/text_size_medium" />
                    </RadioGroup>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                app:cardCornerRadius="@dimen/corner_radius_medium"
                app:cardElevation="@dimen/elevation_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_about"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:padding="@dimen/spacing_medium"
                        android:textSize="@dimen/text_size_medium"
                        tools:text="Versión 1.0" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout> 