<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/colorSurface"
	tools:context=".auth.RegisterActivity">

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/toolbar_register"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:title="@string/register" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_email"
		style="@style/Widget.OurenBus.TextInputLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_xlarge"
		android:hint="@string/profile_email"
		app:layout_constraintTop_toBottomOf="@id/toolbar_register"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginStart="@dimen/spacing_large"
		android:layout_marginEnd="@dimen/spacing_large">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/et_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_name"
		style="@style/Widget.OurenBus.TextInputLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_medium"
		android:hint="@string/profile_name"
		app:layout_constraintTop_toBottomOf="@id/til_email"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginStart="@dimen/spacing_large"
		android:layout_marginEnd="@dimen/spacing_large">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/et_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_password"
		style="@style/Widget.OurenBus.TextInputLayout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_medium"
		android:hint="@string/password"
		app:layout_constraintTop_toBottomOf="@id/til_name"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginStart="@dimen/spacing_large"
		android:layout_marginEnd="@dimen/spacing_large">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/et_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword" />
	</com.google.android.material.textfield.TextInputLayout>

	<Button
		android:id="@+id/btn_create_account"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/register"
		app:layout_constraintTop_toBottomOf="@id/til_password"
		app:layout_constraintStart_toStartOf="@id/til_password"
		app:layout_constraintEnd_toEndOf="@id/til_password"
		android:layout_marginTop="@dimen/spacing_large" />

</androidx.constraintlayout.widget.ConstraintLayout>


